// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BooksPage component > should match snapshot when books list is empty 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font-family: "Tolkien",sans-serif;
  line-height: 1.5;
  font-weight: 300;
  font-size: 4.285714285714286rem;
  margin-bottom: 0.35em;
}

<h1
    class="MuiTypography-root MuiTypography-h2 MuiTypography-gutterBottom emotion-0"
  >
    Tolkienarium
  </h1>
  .emotion-0 {
  margin: 0;
  font-family: "Tolkien",sans-serif;
  line-height: 1.5;
  font-weight: 500;
  font-size: 1.4285714285714284rem;
  margin-bottom: 0.35em;
}

<h2
    class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom emotion-0"
  >
    Tolkienistic books published in Polish
  </h2>
  .emotion-0 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: rgba(0, 0, 0, 0.12);
  border-bottom-width: thin;
}

<hr
    class="MuiDivider-root MuiDivider-fullWidth emotion-0"
  />
  .emotion-0 {
  background-color: #FFFFF3;
  color: #1D263B;
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  box-shadow: var(--Paper-shadow);
  background-image: var(--Paper-overlay);
  width: 100%;
  overflow-x: auto;
}

.emotion-1 {
  display: table;
  width: 100%;
  border-collapse: collapse;
  border-spacing: 0;
}

.emotion-1 caption {
  font-family: "Montserrat Variable",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.43;
  padding: 16px;
  color: #1D263B;
  text-align: left;
  caption-side: bottom;
}

.emotion-2 {
  display: table-header-group;
}

.emotion-3 {
  color: inherit;
  display: table-row;
  vertical-align: middle;
  outline: 0;
}

.emotion-3.MuiTableRow-hover:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

.emotion-3.Mui-selected {
  background-color: rgba(29, 38, 59, 0.08);
}

.emotion-3.Mui-selected:hover {
  background-color: rgba(29, 38, 59, 0.12);
}

.emotion-3:nth-of-type(odd) {
  background-color: rgba(0, 0, 0, 0.04);
}

.emotion-3:last-child td,
.emotion-3:last-child th {
  border: 0px solid;
}

.emotion-4 {
  display: table-row-group;
}

<div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiTableContainer-root emotion-0"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <table
      class="MuiTable-root emotion-1"
    >
      <thead
        class="MuiTableHead-root emotion-2"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head emotion-3"
        />
      </thead>
      <tbody
        class="MuiTableBody-root emotion-4"
      />
    </table>
  </div>
</DocumentFragment>
`;

exports[`BooksPage component > should match snapshot when books list is provided 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font-family: "Tolkien",sans-serif;
  line-height: 1.5;
  font-weight: 300;
  font-size: 4.285714285714286rem;
  margin-bottom: 0.35em;
}

<h1
    class="MuiTypography-root MuiTypography-h2 MuiTypography-gutterBottom emotion-0"
  >
    Tolkienarium
  </h1>
  .emotion-0 {
  margin: 0;
  font-family: "Tolkien",sans-serif;
  line-height: 1.5;
  font-weight: 500;
  font-size: 1.4285714285714284rem;
  margin-bottom: 0.35em;
}

<h2
    class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom emotion-0"
  >
    Tolkienistic books published in Polish
  </h2>
  .emotion-0 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: rgba(0, 0, 0, 0.12);
  border-bottom-width: thin;
}

<hr
    class="MuiDivider-root MuiDivider-fullWidth emotion-0"
  />
  .emotion-0 {
  background-color: #FFFFF3;
  color: #1D263B;
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  box-shadow: var(--Paper-shadow);
  background-image: var(--Paper-overlay);
  width: 100%;
  overflow-x: auto;
}

.emotion-1 {
  display: table;
  width: 100%;
  border-collapse: collapse;
  border-spacing: 0;
}

.emotion-1 caption {
  font-family: "Montserrat Variable",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.43;
  padding: 16px;
  color: #1D263B;
  text-align: left;
  caption-side: bottom;
}

.emotion-2 {
  display: table-header-group;
}

.emotion-3 {
  color: inherit;
  display: table-row;
  vertical-align: middle;
  outline: 0;
}

.emotion-3.MuiTableRow-hover:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

.emotion-3.Mui-selected {
  background-color: rgba(29, 38, 59, 0.08);
}

.emotion-3.Mui-selected:hover {
  background-color: rgba(29, 38, 59, 0.12);
}

.emotion-3:nth-of-type(odd) {
  background-color: rgba(0, 0, 0, 0.04);
}

.emotion-3:last-child td,
.emotion-3:last-child th {
  border: 0px solid;
}

.emotion-4 {
  font-family: "Montserrat Variable",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.43;
  display: table-cell;
  vertical-align: inherit;
  border-bottom: 1px solid rgba(224, 224, 224, 1);
  text-align: left;
  padding: 16px;
  color: #1D263B;
  line-height: 1.7142857142857142rem;
  font-weight: 500;
}

.emotion-4.MuiTableCell-head {
  background-color: #1D263B;
  color: #FFFFF3;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-flex-direction: inherit;
  -ms-flex-direction: inherit;
  flex-direction: inherit;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #FFFFF3;
}

.emotion-5::-moz-focus-inner {
  border-style: none;
}

.emotion-5.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-5 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-5:focus {
  color: #1D263B;
}

.emotion-5:hover {
  color: #1D263B;
}

.emotion-5:hover .MuiTableSortLabel-icon {
  opacity: 0.5;
}

.emotion-5.Mui-active {
  color: #1D263B;
}

.emotion-5.Mui-active .MuiTableSortLabel-icon {
  opacity: 1;
  color: #1D263B;
}

.emotion-5 .MuiTableSortLabel-icon {
  color: #FFFFF3!important;
}

.emotion-5:hover {
  color: #FFFFF3!important;
  opacity: 0.7;
}

.emotion-5.Mui-active {
  color: #FFFFF3!important;
}

.emotion-6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: 1.7142857142857142rem;
  font-size: 18px;
  margin-right: 4px;
  margin-left: 4px;
  opacity: 0;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,-webkit-transform 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.emotion-31 {
  display: table-row-group;
}

.emotion-33 {
  font-family: "Montserrat Variable",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.43;
  display: table-cell;
  vertical-align: inherit;
  border-bottom: 1px solid rgba(224, 224, 224, 1);
  text-align: left;
  padding: 16px;
  color: #1D263B;
}

.emotion-33.MuiTableCell-head {
  background-color: #1D263B;
  color: #FFFFF3;
}

<div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiTableContainer-root emotion-0"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <table
      class="MuiTable-root emotion-1"
    >
      <thead
        class="MuiTableHead-root emotion-2"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head emotion-3"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-4"
            scope="col"
          >
            <span
              class="MuiButtonBase-root MuiTableSortLabel-root MuiTableSortLabel-directionAsc emotion-5"
              role="button"
              tabindex="0"
            >
              Original Title
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc emotion-6"
                data-testid="ArrowDownwardIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-4"
            scope="col"
          >
            <span
              class="MuiButtonBase-root MuiTableSortLabel-root MuiTableSortLabel-directionAsc emotion-5"
              role="button"
              tabindex="0"
            >
              Polish Title
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc emotion-6"
                data-testid="ArrowDownwardIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-4"
            scope="col"
          >
            <span
              class="MuiButtonBase-root MuiTableSortLabel-root MuiTableSortLabel-directionAsc emotion-5"
              role="button"
              tabindex="0"
            >
              Translator
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc emotion-6"
                data-testid="ArrowDownwardIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-4"
            scope="col"
          >
            <span
              class="MuiButtonBase-root MuiTableSortLabel-root MuiTableSortLabel-directionAsc emotion-5"
              role="button"
              tabindex="0"
            >
              Publisher
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc emotion-6"
                data-testid="ArrowDownwardIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-4"
            scope="col"
          >
            <span
              class="MuiButtonBase-root MuiTableSortLabel-root MuiTableSortLabel-directionAsc emotion-5"
              role="button"
              tabindex="0"
            >
              Year
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc emotion-6"
                data-testid="ArrowDownwardIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-4"
            scope="col"
          >
            <span
              class="MuiButtonBase-root MuiTableSortLabel-root MuiTableSortLabel-directionAsc emotion-5"
              role="button"
              tabindex="0"
            >
              Pub. no
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc emotion-6"
                data-testid="ArrowDownwardIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-4"
            scope="col"
          >
            <span
              class="MuiButtonBase-root MuiTableSortLabel-root MuiTableSortLabel-directionAsc emotion-5"
              role="button"
              tabindex="0"
            >
              Cover
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc emotion-6"
                data-testid="ArrowDownwardIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-4"
            scope="col"
          >
            <span
              class="MuiButtonBase-root MuiTableSortLabel-root MuiTableSortLabel-directionAsc emotion-5"
              role="button"
              tabindex="0"
            >
              Series
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc emotion-6"
                data-testid="ArrowDownwardIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-4"
            scope="col"
          >
            <span
              class="MuiButtonBase-root MuiTableSortLabel-root MuiTableSortLabel-directionAsc emotion-5"
              role="button"
              tabindex="0"
            >
              ISBN
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc emotion-6"
                data-testid="ArrowDownwardIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root emotion-31"
      >
        <tr
          class="MuiTableRow-root emotion-3"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-33"
          >
            The Hobbit
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-33"
          >
            <a
              href="/library/books/hobbit-czyli-tam-i-z-powrotem"
            >
              Hobbit, czyli tam i z powrotem
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-33"
          >
            <a
              href="/library/translator/marek-oramus"
            >
              Marek Oramus
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-33"
          >
            <a
              href="/library/publishers/rebis"
            >
              Rebis
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-33"
          >
            2020
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-33"
          >
            5
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-33"
          >
            Miękka
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-33"
          >
            Middle-earth
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-33"
          >
            9781234567897
          </td>
        </tr>
        <tr
          class="MuiTableRow-root emotion-3"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-33"
          >
            Unfinished Tales
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-33"
          >
            <a
              href="/library/books/niedokonczone-opowiesci"
            >
              Niedokończone opowieści
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-33"
          >
            <a
              href="/library/translator/marta-nowak"
            >
              Marta Nowak
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-33"
          >
            <a
              href="/library/publishers/zysk-i-s-ks"
            >
              Zysk i S-ks
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-33"
          >
            2021
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-33"
          >
            2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-33"
          >
            Twarda
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-33"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-33"
          >
            123INVALID
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
